--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
 # Install SpyderIDE Support and Jupyter
 # pip install spyder-kernels 
-pip install jupyter jupyterlab ipyvuetify
+# jupyter 
+# jupyterlab
 # Numerical Support
-pip install numpy pandas scipy
+# numpy 
+pandas
+datatable
 # Graphics
-pip install matplotlib seaborn altair graphviz plotly
+# matplotlib seaborn altair graphviz plotly
 # Machine Learning
-pip install sklearn statsmodels
-pip install tensorflow keras
+# sklearn statsmodels
+# tensorflow keras
 # pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio===0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
 # NLP Stuff
-pip install nltk spacy
+# nltk spacy
 # pip install fast-ml
-
-
-python -m spacy download en_core_web_sm
-python -m spacy download pt_core_news_sm
