--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,25 @@
 # jupyter 
 # jupyterlab
 ## Numerical Support
-# numpy 
 pandas
+pandasgui
 datatable
+## Graphics
+# matplotlib graphviz plotly
+seaborn 
+altair
+## Machine Learning
+sklearn 
+statsmodels
+# tensorflow keras
+# pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio===0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
+# NLP Stuff
+nltk 
+spacy
+## QoL
+pydash
+icecream
 ## Iterables
 more_itertools
 ## Database
 peewee
-## Graphics
-# matplotlib seaborn altair graphviz plotly
-# Machine Learning
-# sklearn statsmodels
-# tensorflow keras
-# pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio===0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
-# NLP Stuff
-# nltk spacy
-# pip install fast-ml
