split nlp requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,9 @@ altair
 ## Machine Learning
 sklearn 
 statsmodels
-# tensorflow keras
+# tensorflow 
+# keras
 # pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio===0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
-# NLP Stuff
-nltk 
-spacy
 ## Database
 peewee
 ## QoL
