make dslib availble as a command

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,8 @@ version = 0.0.1
 packages = dslib
 install_requires =
     requests
-    importlib; python_version == "2.6"
+    click
+
+[options.entry_points]
+console_scripts =
+    dslib = dslib.cli:cli
