--- a/.gitignore
+++ b/.gitignore
@@ -55,12 +55,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
 # Flask stuff:
 instance/
 .webassets-cache
@@ -131,6 +125,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Doit
+.doit.*
 
 # Credentials
 keys.py
