add dsexamples to pip install and move notebooks to their folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,9 @@ name = dslib
 version = 0.0.1
 
 [options]
-packages = dslib
+packages = 
+    dslib
+    dsexamples
 install_requires =
     requests
     click
