--- a/dsapps/wordcloud/templates/package.json
+++ b/dsapps/wordcloud/templates/package.json
@@ -21,6 +21,7 @@
     "parcel": "^2.3.2"
   },
   "dependencies": {
+    "@parcel/transformer-sass": "^2.3.2",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1"
