--- a/package.json
+++ b/package.json
@@ -33,14 +33,24 @@
     }
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.3.2",
+    "@parcel/transformer-vue": "^2.3.2",
     "gulp": "^4.0.2",
     "gulp-execa": "^3.0.2",
     "parcel": "^2.3.2",
-    "@parcel/transformer-sass": "^2.3.2"
+    "process": "^0.11.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1"
+    "bootstrap-icons": "^1.8.1",
+    "bootstrap-vue": "^2.21.2",
+    "mdue": "^0.1.4",
+    "vue": "^3.2.31",
+    "vue-feather": "^2.0.0"
   }
 }
