--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "parcel:dev:server": "parcel serve dsapps/_templates/src/**/*.html",
-    "parcel:build": "parcel build dsapps/_templates/src/**/*.html",
-    "parcel:watch": "parcel watch dsapps/_templates/src/**/*.html",
+    "query": "node ./query.mjs",
+    "parcel:serve": "parcel serve --target dsapps dsapps",
+    "parcel:build": "parcel build --target dsapps dsapps",
+    "parcel:watch": "parcel watch --target dsapps dsapps",
     "electron": "electron gui.cjs",
     "electron:dev": "electron gui.cjs --dev"
   },
@@ -29,21 +30,14 @@
     "url": "https://github.com/mjsmagalhaes/examples-datascience/issues"
   },
   "homepage": "https://github.com/mjsmagalhaes/examples-datascience#readme",
-  "targets": {
-    "default": {
-      "context": "browser",
-      "publicUrl": "/assets",
-      "distDir": "./dsapps/_templates/dist"
-    }
-  },
   "devDependencies": {
+    "@parcel/transformer-pug": "^2.3.2",
     "@parcel/transformer-sass": "^2.3.2",
     "@parcel/transformer-vue": "^2.3.2",
     "electron": "^17.2.0",
     "gulp": "^4.0.2",
     "gulp-execa": "^3.0.2",
-    "parcel": "^2.3.2",
-    "process": "^0.11.10"
+    "parcel": "^2.3.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -52,10 +46,12 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
-    "bootstrap-vue": "^2.21.2",
-    "mdue": "^0.1.4",
-    "vue": "^3.2.31",
-    "vue-feather": "^2.0.0"
+    "cherio": "^1.0.0-rc.2",
+    "fast-csv": "^4.3.6",
+    "got": "^12.0.2",
+    "jsonpath": "^1.1.1",
+    "lodash": "^4.17.21",
+    "ramda": "^0.28.0",
+    "vue": "^3.2.31"
   }
 }
