improve datacrawler json transformations

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cherio": "^1.0.0-rc.2",
     "fast-csv": "^4.3.6",
     "got": "^12.0.2",
+    "jsonata": "^1.8.6",
     "jsonpath": "^1.1.1",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
