--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
+    "cli-table3": "^0.6.1",
+    "commander": "^9.1.0",
     "fast-csv": "^4.3.6",
     "got": "^12.0.2",
     "jsonata": "^1.8.6",
