--- a/package.json
+++ b/package.json
@@ -12,13 +12,7 @@
     "#modules/*": "./node_modules/*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "query": "node ./query.mjs",
-    "parcel:serve": "parcel serve --target dsapps dsapps",
-    "parcel:build": "parcel build --target dsapps dsapps",
-    "parcel:watch": "parcel watch --target dsapps dsapps",
-    "electron": "electron gui.cjs",
-    "electron:dev": "electron gui.cjs --dev"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -31,31 +25,10 @@
   },
   "homepage": "https://github.com/mjsmagalhaes/examples-datascience#readme",
   "devDependencies": {
-    "@parcel/transformer-pug": "^2.3.2",
-    "@parcel/transformer-sass": "^2.3.2",
-    "@parcel/transformer-vue": "^2.3.2",
-    "electron": "^17.2.0",
+    "@parcel/transformer-pug": "^2.4.0",
+    "@parcel/transformer-sass": "^2.4.0",
+    "@parcel/transformer-vue": "^2.4.0",
     "gulp": "^4.0.2",
-    "gulp-execa": "^3.0.2",
-    "parcel": "^2.3.2"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@popperjs/core": "^2.11.2",
-    "bootstrap": "^5.1.3",
-    "chalk": "^5.0.1",
-    "cherio": "^1.0.0-rc.2",
-    "cli-table3": "^0.6.1",
-    "commander": "^9.1.0",
-    "fast-csv": "^4.3.6",
-    "got": "^12.0.2",
-    "jsonata": "^1.8.6",
-    "jsonpath": "^1.1.1",
-    "lodash": "^4.17.21",
-    "ramda": "^0.28.0",
-    "vue": "^3.2.31"
+    "gulp-execa": "^3.0.2"
   }
 }
