--- a/dsapps/package.json
+++ b/dsapps/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.2",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
