--- a/dsapps/package.json
+++ b/dsapps/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build --target dsapps index.html",
-    "serve": "parcel serve --target dsapps index.html",
+    "build": "parcel build --target prod",
+    "serve": "parcel serve --target dsapps",
     "watch": "parcel watch --target prod"
   },
   "author": "",
