--- a/dsapps/package.json
+++ b/dsapps/package.json
@@ -43,7 +43,8 @@
     "jsonpath": "^1.1.1",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@parcel/transformer-pug": "^2.3.2",
