--- a/dsapps/package.json
+++ b/dsapps/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build --target prod",
     "serve": "parcel serve --target dsapps",
-    "watch": "parcel watch --target prod"
+    "start": "parcel watch --target prod"
   },
   "author": "",
   "license": "ISC",
